--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "gulp-sourcemaps": "3.0.0",
     "gulp-svgstore": "^7.0.1",
     "gulp-uglify": "^3.0.2",
+    "gulp-uglify-es": "^2.0.0",
     "gulp-webp": "^4.0.1",
+    "pixel-glass": "^1.0.13",
     "postcss": "8.1.7",
     "postcss-csso": "^5.0.0",
     "stylelint": "13.7.2",
